# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: Shader.h
src/: Shader.cc  hello_triangle.cc  hello_triangle_exercise_1.cc  hello_triangle_exercise_2.cc  main.cc  shaders.cc  textures.cc
src/shaders/: shader.frag  shader.vert  texture.frag  texture.vert
